@@ -1,5 +1,10 @@
 2007-06-30 Zoran Vasiljevic <zv@archiware.com>
 
+	* generic/threadPoolCmd.c: Fixed signedness compiler warning
+	on jobId in TpoolWaitObjCmd().
+
+2007-06-30 Zoran Vasiljevic <zv@archiware.com>
+
 	* generic/threadSvKeylistCmd.c: Fixed off-by-1 error in argument
 	parsing for SvKeylkeysObjCmd(). See Tcl Bug #1575342.
 
